--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body onload="controlloMediaQuery()">
 
-<section class="copertina">
+<!-- <section class="copertina">
 
 	<div class="immagine">
 	</div>
@@ -32,7 +32,7 @@
 
 </section>
 
-<section class="presentazione">UN SOLO REGNO</section>
+<section class="presentazione">UN SOLO REGNO</section> -->
 
 <section class="compitiContainer">
 
