--- a/index.html
+++ b/index.html
@@ -16,23 +16,12 @@
 	<link href="https://fonts.googleapis.com/css2?family=DotGothic16&family=VT323&display=swap" rel="stylesheet">
 	
 	<!-- local style-->
-	<link rel="stylesheet" href="eroeStyleTelView.css" >
+	<link rel="stylesheet" href="css2.css" >
 
 </head>
 
 
 <body onload="controlloMediaQuery()">
-
-<!-- <section class="copertina">
-
-	<div class="immagine">
-	</div>
-
-	<div class="nome">MY GESTAPO</div>
-
-</section>
-
-<section class="presentazione">UN SOLO REGNO</section> -->
 
 <section class="compitiContainer">
 
@@ -43,7 +32,7 @@
 		<div id="testoSfida" class="descrizione2"></div>
 		<div class="password">
 			<div id="inputIndizio" class="indizio"></div>
-			<div id="casella">
+			<div id="casella" class="casella">
 				<input id="passwordInput" class="passwordInput"></input>
 				<button id="buttonInput" class="buttonInput" onclick="sbloccaSfida(passwordInput.value)">OK</button>
 			</div>
