--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=DotGothic16&family=VT323&display=swap" rel="stylesheet">
 	
 	<!-- local style-->
-	<link rel="stylesheet" href="css2.css" >
+	<link rel="stylesheet" href="eroeStyleTelView.css" >
 
 </head>
 
