--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=DotGothic16&family=VT323&display=swap" rel="stylesheet">
 	
 	<!-- local style-->
-	<link rel="stylesheet" href="eroeStyleTelView.css" >
+	<link rel="stylesheet" href="theMatrix.css" >
 
 </head>
 
@@ -27,8 +27,10 @@
 
 	<div id="compito1Titolo" class="compitiTitolo">
 		<div id="titolo" class="titolo2"></div>
-		<div id="foto" class="foto"></div>
 		<div id="descrizione" class="descrizione"></div>
+		<div id="foto" class="foto">
+			<div id="foto2" class="foto2"></div>
+		</div>
 		<div id="testoSfida" class="descrizione2"></div>
 		<div class="password">
 			<div id="inputIndizio" class="indizio"></div>
@@ -40,9 +42,6 @@
 	</div>
 
 
-</section>
-
-<section class="end">
 </section>
 
 </body>
